--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.item-card {
+  width: 300px;
+}
+
+.item-card-action {
+  text-align: right;
+}
+
+
+.example-header-image {
+  background-size: cover;
+}
